# quorum

./: .editorconfig  .gitignore  .prettierignore  CLAUDE.md  PROJECT.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: dev-screenshot.ps1  settings.local.json
.claude/memory/: MEMORY.md  feedback_code_style.md  feedback_communication.md  feedback_workflow.md  pending_smoke_tests.md  project_audio_processing.md  project_auto_update.md  project_overview.md  project_phase1_decisions.md  project_phase3_decisions.md  project_phase4_decisions.md  project_phase5_decisions.md  project_phase6_decisions.md  project_phases.md  project_screen_share_quality_plan.md  project_stack_decisions.md  project_ui_polish_2026.md  user_profile.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: _gen.ps1
apps/desktop/src-tauri/src/: keychain.rs  lib.rs  main.rs  tray.rs
apps/server/: .env.example  drizzle.config.ts  package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts  vitest.config.ts
docs/: deploy.md  friends-guide.md  release.md
docs/decisions/: 0001-monorepo-pnpm-workspaces.md  (+8 more)
infra/: .env.prod.example  Caddyfile.prod  Dockerfile.server  README.md  backup.sh  deploy.sh  docker-compose.ip.yml  docker-compose.prod.yml  docker-compose.yml
scripts/: gen-sounds.mjs
(+193 files in other folders)
