[package]
name = "quorum-desktop"
version = "0.0.1"
description = "Quorum desktop client"
authors = ["Quorum"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "quorum_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }
thiserror = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
